--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.3
   shared_preferences: ^2.2.1
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data.json
-    - assets/background.png
+    - assets/images/background.png
+    - assets/lotties/movie.json
+    - assets/lotties/loading.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
